--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,11 +2,15 @@
 .fixed-header {
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 50%;
   background-color: black;
-  box-shadow: 0 2px 4px white;
+  box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.7);
   z-index: 1000;
   height: 54px;
+
+
+  border-radius: 20px;
+  margin: 10px 25%;
 }
   
 .fixed-header h1 {
@@ -52,9 +56,11 @@ li{
 
 .button-container {
   position: relative;
-  display: inline-block;
+  display: flex;
   padding: 1rem;
 
+  flex-direction: column;
+  justify-content: center;
 }
 .button-container:hover{
   color: gold;
@@ -163,3 +169,22 @@ li{
   min-width: 40.95px;
 }
 
+.facebook{
+  display: block;
+  height: 20px;
+  width: 20px;
+  transition: opacity 0.25s ease-in-out;
+}
+
+.facebook.hovered {
+  opacity: 0.5; /* Lower opacity for smooth transition */
+}
+
+.button-container-a {
+  position: relative;
+  display: flex;
+  padding: 1rem;
+
+  flex-direction: column;
+  justify-content: center;
+}
