--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -6,12 +6,13 @@
   background-color: black;
   box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.7);
   z-index: 1000;
-  height: 54px;
+  height: 57px;
 
-
+  border: 3px solid #d3d3d3;
   border-radius: 20px;
   margin: 10px 25%;
 }
+
   
 .fixed-header h1 {
   margin: 0;
@@ -171,8 +172,8 @@ li{
 
 .facebook{
   display: block;
-  height: 20px;
-  width: 20px;
+  height: 25px;
+  width: 25px;
   transition: opacity 0.25s ease-in-out;
 }
 
@@ -183,8 +184,20 @@ li{
 .button-container-a {
   position: relative;
   display: flex;
-  padding: 1rem;
+  padding: 0.7rem;
+  top: 2.5px;
+  align-items: center;
 
   flex-direction: column;
   justify-content: center;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: transparent; /* Transparent background */
+  z-index: 1; /* Ensure the overlay is on top of the image */
 }
