--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,8 +7,8 @@ body {
   /* height: 100vh;
   width: 100vw; */
   justify-content: center;
-  align-items: center;
-  height: 100%;
+  /* align-items: center; */
+  /* height: 100%; */
 }
 
 #root{
@@ -22,6 +22,6 @@ main {
 }
 
 .all_container {
-  width: 100%;
+  /* width: 100%; */
   background-color: black;
 }
