--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -5,7 +5,7 @@ p {
 .home_container{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     width: 100%;
     background-color: #000;
 }
@@ -41,31 +41,114 @@ p {
     white-space: nowrap;
     background-color: #000;
 
-    margin-top: 50px;
+    margin-top: 10px;
+}
+
+.images-wrapper{
+    display: flex;
+    width: 100%;
+    background-color: #000;
 }
 
 .image-wrapper {
     display: inline-block;
     width: calc(200%); /* Adjust this to ensure the wrapper is twice as wide as the viewport */
-    animation: scroll 30s linear infinite; 
+    animation: scroll 25s linear infinite; 
+    left: 0%;
 }
 
-.image-wrapper img {
-    width: 200px; /* Adjust the size as needed */
-    height: 100px; /* Adjust the size as needed */
+/* .image-wrapper img {
+    width: 200px; 
+    min-width: 200px;
+    height: 100px; 
     margin: 10px;
+    display: inline-block;
+
+    border-radius: 10px;
+    border: 3px solid #d3d3d3;
+} */
+
+.image-wrapper-right {
+    display: inline-block;
+    width: calc(200%); /* Adjust this to ensure the wrapper is twice as wide as the viewport */
+    animation: scroll2 25s linear infinite; 
+    left: 0%;
+}
+
+.image-wrapper img,
+.image-wrapper-right img {
+    width: 15.625%; /* Adjust the size as needed */
+    min-width: 15.625%;
+    height: 125px;
+    margin: 0.78125%;
     display: inline-block;
 
     border-radius: 10px;
     border: 3px solid #d3d3d3;
 }
 
+.images_left_box{
+    left: 0%;
+    width: 50%;
+    overflow: hidden;
+    height: auto;
+}
+
+.images_right_box{
+    /* left: 50%; */
+    width: 50%;
+    overflow: hidden;
+    height: auto;
+    position: relative;
+}
+
+.magic-wand {
+    position: absolute;
+    top: 56%; /* Center vertically */
+    left: 50%; /* Center horizontally */
+    transform: translate(-50%, -50%); /* Adjust position to exact center */
+    width: auto; /* Adjust size as needed */
+    height: 550px; /* Maintain aspect ratio */
+    z-index: 10; /* Ensure it's above other elements */
+}
+
+.images-wrapper::before,
+.images-wrapper::after {
+    content: '';
+    position: absolute;
+    top: 20%;
+    bottom: 20%;
+    width: 8%;
+    z-index: 5;
+    pointer-events: none;
+}
+
+.images-wrapper::before {
+    left: 0;
+    background: linear-gradient(to right, #000 0%, rgba(0, 0, 0, 0) 100%);
+}
+
+.images-wrapper::after {
+    right: 0;
+    background: linear-gradient(to left, #000 0%, rgba(0, 0, 0, 0) 100%);
+}
+
 @keyframes scroll {
     0% {
-        transform: translateX(-1980px);
+        transform: translateX(-154.6875%);
     }
     100% {
-        transform: translateX(0px);
+        transform: translateX(0%);
+      
+    }
+  }
+
+@keyframes scroll2 {
+    0% {
+        transform: translateX(-204.6875%);
+    }
+    100% {
+        transform: translateX(-50%);
       
     }
   }
