--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -140,10 +140,78 @@ p {
     margin-left: 50px;
 }
 
-.Gold_chunk{
-    width: 600px;
-    left: 0;
+.gold_squig{
+    position: absolute;
+    width: 100%;
+    z-index: 10;
+    /* margin-top: 200px; */
+    height: 80px;
 }
+
+
+.gold_squig_top{
+    top: 0;
+}
+
+
+.gold_squig_bottom{
+    bottom: 1px;
+    transform: rotate(180deg);
+}
+
+.big_pretty_container {
+    margin-top: 200px;
+    position: relative;
+    height: 760px;
+    width: 100%;
+    overflow: hidden;
+}
+
+.big_pretty_wrapper{
+    margin-top: 40px;
+    
+    width: 100%;
+    height: 680px;
+    overflow: hidden;
+    align-self: center;
+
+}
+  
+.big_pretty {
+    width: 100%;
+    height: auto; /* Maintains aspect ratio */
+    display: block; /* Removes default inline styling */
+    z-index: 1;
+}
+
+.text_big_image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 2;
+  }
+  
+  .text_big_image h1 {
+    font-size: 3em; /* Adjust as needed */
+    font-weight: bold;
+    margin: 0;
+    color: whitesmoke;
+
+    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.7);
+  }
+  
+  .text_big_image h2 {
+    font-size: 1em; /* Adjust as needed */
+    font-weight: normal;
+    margin-top: 30px;
+    letter-spacing: 0.2em; /* Adjust for spacing between letters */
+
+    color: whitesmoke;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+  }
+
 
 @keyframes scroll {
     0% {
