--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -212,6 +212,32 @@ p {
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
   }
 
+.bottom_container{
+
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    position: relative;
+    width: 100%;
+
+    margin-top: 200px;
+}
+
+.goldie{
+    width: 25%;
+    height: auto;
+    position: absolute;
+    bottom: 0;
+}
+
+.bottom_left{
+    left: 0;
+}
+
+.bottom_right{
+    right: 0;
+    transform: scaleX(-1);
+}
 
 @keyframes scroll {
     0% {
