--- a/src/styles/ImageCard.css
+++ b/src/styles/ImageCard.css
@@ -1,4 +1,4 @@
-.galleryCard {
+/* .galleryCard {
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -7,6 +7,17 @@
   margin-left: 50px;
   margin-right: 50px;
   margin-bottom: 20px;
+} */
+
+
+.galleryCard {
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  width: 100%;
+  max-width: 1200px;
+  margin: 90px auto 20px; /* Center the container itself */
+  gap: 20px; /* Add space between the items */
 }
 
 .gallery-item {
@@ -15,6 +26,9 @@
   /* margin-left: 0px;
   margin-right: 0px; */
   transition: transform 0.6s ease, filter 0.6s ease;
+
+  flex-basis: calc(30% - 40px); /* Adjusted to make the images smaller */
+  max-width: 350px; /* Set a max-width for more control */
 }
 
 .gallery-item img {
