--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -44,6 +44,7 @@ p {
     margin-top: 10px;
 }
 
+
 .images-wrapper{
     display: flex;
     width: 100%;
@@ -68,6 +69,7 @@ p {
     border: 3px solid #d3d3d3;
 } */
 
+
 .image-wrapper-right {
     display: inline-block;
     width: calc(200%); /* Adjust this to ensure the wrapper is twice as wide as the viewport */
@@ -87,6 +89,7 @@ p {
     border: 3px solid #d3d3d3;
     box-shadow: 0 0 10px 1px rgba(255, 255, 255, 0.7);
 }
+
 
 .images_left_box{
     left: 0%;
@@ -143,7 +146,7 @@ p {
 .gold_squig{
     position: absolute;
     width: 100%;
-    z-index: 10;
+    z-index: 12;
     /* margin-top: 200px; */
     height: 80px;
 }
@@ -182,7 +185,35 @@ p {
     height: auto; /* Maintains aspect ratio */
     display: block; /* Removes default inline styling */
     z-index: 1;
+    
 }
+
+
+.highlight {
+    position: absolute;
+    pointer-events: none;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.05); /* Light up color */
+    box-shadow: 0 0 10px 5px rgba(69, 69, 69, 0.7);
+
+    width: 150px;
+    height: 150px;
+    transform: translate(-47%, -18%);
+
+    backdrop-filter: contrast(160%) saturate(110%) brightness(200%) grayscale(80%);
+    mix-blend-mode: screen;
+    z-index: 10;
+  }
+
+  .overlay_pretty {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 5; /* Same as highlight to ensure proper interaction */
+  }
+
 
 .text_big_image {
     position: absolute;
@@ -190,7 +221,7 @@ p {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    z-index: 2;
+    z-index: 7;
   }
   
   .text_big_image h1 {
@@ -198,6 +229,7 @@ p {
     font-weight: bold;
     margin: 0;
     color: whitesmoke;
+    z-index: 7;
 
     text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.7);
   }
@@ -210,6 +242,7 @@ p {
 
     color: whitesmoke;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+    z-index: 7;
   }
 
 .bottom_container{
