--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -88,6 +88,15 @@ p {
     border-radius: 10px;
     border: 3px solid #d3d3d3;
     box-shadow: 0 0 10px 1px rgba(255, 255, 255, 0.7);
+
+    /* border: 3px solid; 
+    border-image-slice: 1;
+    border-image-source: linear-gradient(45deg, rgb(171, 79, 1), rgb(203, 130, 25), rgb(250, 190, 80)); */
+
+    /* box-shadow: 0 0 5px 1px rgba(206, 97, 2, 0.8),
+              0 0 10px 2px rgba(223, 141, 27, 0.6),
+              0 0 15px 3px rgba(245, 187, 79, 0.4); */
+              
 }
 
 
