--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -49,3 +49,30 @@ main {
   margin-right: 6px;
   margin-top: 5px;
 }
+
+.bottom_container{
+
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  position: relative;
+  width: 100%;
+
+  margin-top: 200px;
+}
+
+.goldie{
+  width: 25%;
+  height: auto;
+  position: absolute;
+  bottom: 0;
+}
+
+.bottom_left{
+  left: 0;
+}
+
+.bottom_right{
+  right: 0;
+  transform: scaleX(-1);
+}
