--- a/src/styles/ImageCard.css
+++ b/src/styles/ImageCard.css
@@ -1,15 +1,3 @@
-/* .galleryCard {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  max-width: 1200px;
-  margin-top: 90px;
-  margin-left: 50px;
-  margin-right: 50px;
-  margin-bottom: 20px;
-} */
-
-
 .galleryCard {
   display: flex;
   justify-content: center; /* Center horizontally */
@@ -23,10 +11,9 @@
 .gallery-item {
   position: relative;
   flex: 1;
-  /* margin-left: 0px;
-  margin-right: 0px; */
+  margin-left: 5px;
+  margin-right: 5px;
   transition: transform 0.6s ease, filter 0.6s ease;
-
   flex-basis: calc(30% - 40px); /* Adjusted to make the images smaller */
   max-width: 350px; /* Set a max-width for more control */
 }
@@ -36,6 +23,8 @@
   height: auto;
   display: block;
   transition: filter 0.6s ease;
+  border: 5px solid #C49233;
+  border-radius: 12px;
 }
 
 .gallery-item.hovered img {
@@ -44,14 +33,14 @@
 
 .text {
   position: absolute;
-  top: 50%;
+  top: 18%; /* Align to the top of the image */
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
   text-align: center;
   color: whitesmoke;
-
+  width: 75%;
+  padding: 10px 0; /* Add padding for spacing */
   transition: opacity 0.6s ease, transform 0.6s ease;
-  
 }
 
 .title {
@@ -59,24 +48,24 @@
   font-weight: bold;
   margin: 0;
   color: whitesmoke;
-
-  text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.7);
+  text-shadow: 
+    4px 4px 6px rgba(0, 0, 0, 1),    /* Strong first shadow */
+    8px 8px 12px rgba(0, 0, 0, 0.9),  /* Additional shadow for depth */
+    0px 0px 20px rgba(0, 0, 0, 0.8),  /* Soft glow effect */
+    0px 0px 25px rgba(0, 0, 0, 0.7),  /* Further glow effect */
+    0px 0px 30px rgba(0, 0, 0, 0.6);  /* Even further glow effect */
 }
 
 .description {
   font-size: 1em; /* Adjust as needed */
-    font-weight: normal;
-
-    letter-spacing: 0.2em; /* Adjust for spacing between letters */
-
-    color: whitesmoke;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+  font-weight: normal;
+  letter-spacing: 0.1em; 
+  color: whitesmoke;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
   margin-top: 10px;
-
   transition: 0.6s ease;
   opacity: 0;
 }
-
 
 .gallery-item.hovered .description {
   opacity: 1;
@@ -94,7 +83,6 @@
   opacity: 0;
   transition: 0.6s ease;
   text-decoration: none;
-
   border-radius: 15px;
 }
 
@@ -103,7 +91,6 @@
 }
 
 .learn-more:hover {
-  /* background: linear-gradient(45deg, #FFDB91, #DCA457, #BB792B); */
   background: #F1CC5F;
   color: black;
   text-decoration: none;
