--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -48,13 +48,14 @@ main {
   justify-content: space-between;
   position: relative;
   width: 100%;
-  margin-top: 200px;
+  margin-top: 120px;
 }
 
 .goldie {
   width: 25%;
   height: auto;
   position: absolute;
+  z-index: 1;
   bottom: 0;
 }
 
