--- a/src/styles/ContactInfo.css
+++ b/src/styles/ContactInfo.css
@@ -26,6 +26,7 @@
   .contact-info-content {
     margin-left: 80px;
     max-width: 800px;
+    z-index: 4;
   }
   
   .contact-info-title {
@@ -114,7 +115,7 @@
   
   .contact-button:hover {
     background-color: #F1CC5F;
-    border-color: #F1CC5F;
+    /* border-color: #F1CC5F; */
     color: black;
     text-decoration: none;
   }
