--- a/src/styles/ImageCard.css
+++ b/src/styles/ImageCard.css
@@ -8,7 +8,7 @@
   gap: 20px; /* Add space between the items */
 }
 
-.gallery-item {
+.card-item {
   position: relative;
   flex: 1;
   margin-left: 5px;
@@ -18,7 +18,7 @@
   max-width: 350px; /* Set a max-width for more control */
 }
 
-.gallery-item img {
+.card-item img {
   width: 100%;
   height: auto;
   display: block;
@@ -27,7 +27,7 @@
   border-radius: 12px;
 }
 
-.gallery-item.hovered img {
+.card-item.hovered img {
   filter: brightness(0.5);
 }
 
@@ -67,7 +67,7 @@
   opacity: 0;
 }
 
-.gallery-item.hovered .description {
+.card-item.hovered .description {
   opacity: 1;
 }
 
@@ -86,7 +86,7 @@
   border-radius: 15px;
 }
 
-.gallery-item.hovered .learn-more {
+.card-item.hovered .learn-more {
   opacity: 1;
 }
 
