--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -1,3 +1,21 @@
 .services-container{
     margin-top: -45px;
 }
+/* @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
+  .services-container .chakra-image {
+    animation: fadeIn 0.75s forwards;
+  } */
+  
+  .services-container .chakra-image {
+    width: 100%;
+    height: auto;
+  }
+  
